--- a/src/components/organisms/navigation-bar/style.module.css
+++ b/src/components/organisms/navigation-bar/style.module.css
@@ -2,4 +2,8 @@
     padding: 1rem 2rem;
     height: 5rem;
     max-height: 5rem;
+    position: absolute;
+    width: 100%;
+    z-index: 90;
+    background: linear-gradient(to bottom, var(--background-color), rgba(var(--background-color-code), 0));
 }
