👌 IMPROVE: Poster component and new color

--- a/src/components/atoms/container/style.module.css
+++ b/src/components/atoms/container/style.module.css
@@ -1,5 +1,9 @@
 .container {
     @apply container;
+    
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
 }
 
 .container--fluid {
