--- a/src/components/organisms/carousel/style.module.css
+++ b/src/components/organisms/carousel/style.module.css
@@ -13,7 +13,7 @@
     background-position: top center;
     background-size: cover;
     background-image: var(--hero-bg-image);
-    filter: brightness(1.2) contrast(1.2);
+    filter: contrast(1.2) brightness(1.2);
     display: flex;
     flex-direction: column;
     overflow: hidden;
