--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,8 @@
 
     --primary-gradient: linear-gradient(
         to right,
-        var(--secondary-color),
-        var(--primary-color)
+        var(--primary-color),
+        var(--secondary-color)
     );
     --secondary-gradient: linear-gradient(
         to right,
@@ -41,7 +41,9 @@
         var(--accent-color)
     );
 
-    --background-gradient-code: var(--background-color) 10%, rgba(var(--background-color-code), 0.7) 80%, rgba(var(--background-color-code), 0); 
+    --background-gradient-code: var(--background-color) 10%,
+        rgba(var(--background-color-code), 0.7) 80%,
+        rgba(var(--background-color-code), 0);
 }
 
 html {
@@ -54,10 +56,26 @@ html {
     box-sizing: inherit;
 }
 
-button, button:focus {
+button,
+button:focus {
     outline: none;
 }
 
+*::-webkit-scrollbar {
+    width: 0.5em;
+    height: 0.5em;
+}
+ 
+*::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #fff1;
+    border-radius: 1rem;
+}
+ 
+*::-webkit-scrollbar-thumb {
+  background-color: #fff1;
+  border-radius: 1rem;
+}
 body {
     margin: 0;
     font-family: var(--body-font-family);
@@ -78,7 +96,9 @@ body.dark-theme {
     --background-color: var(--darkest-color);
     --contrast-color: var(--brightest-color);
     --contrast-color-code: var(--brightest-color-code);
-    --background-gradient-code: var(--background-color) 10%, rgba(var(--background-color-code), 0.7) 80%, rgba(var(--background-color-code), 0); 
+    --background-gradient-code: var(--background-color) 10%,
+        rgba(var(--background-color-code), 0.7) 80%,
+        rgba(var(--background-color-code), 0);
 }
 
 body.light-theme {
@@ -86,7 +106,9 @@ body.light-theme {
     --background-color: var(--brightest-color);
     --contrast-color: var(--darkest-color);
     --contrast-color-code: var(--darkest-color-code);
-    --background-gradient-code: var(--background-color) 10%, rgba(var(--background-color-code), 0.7) 80%, rgba(var(--background-color-code), 0); 
+    --background-gradient-code: var(--background-color) 10%,
+        rgba(var(--background-color-code), 0.7) 80%,
+        rgba(var(--background-color-code), 0);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -95,7 +117,9 @@ body.light-theme {
         --background-color: var(--darkest-color);
         --contrast-color: var(--brightest-color);
         --contrast-color-code: var(--brightest-color-code);
-        --background-gradient-code: var(--background-color) 10%, rgba(var(--background-color-code), 0.7) 80%, rgba(var(--background-color-code), 0); 
+        --background-gradient-code: var(--background-color) 10%,
+            rgba(var(--background-color-code), 0.7) 80%,
+            rgba(var(--background-color-code), 0);
     }
 }
 
@@ -105,6 +129,8 @@ body.light-theme {
         --background-color: var(--brightest-color);
         --contrast-color: var(--darkest-color);
         --contrast-color-code: var(--darkest-color-code);
-        --background-gradient-code: var(--background-color) 10%, rgba(var(--background-color-code), 0.7) 80%, rgba(var(--background-color-code), 0); 
+        --background-gradient-code: var(--background-color) 10%,
+            rgba(var(--background-color-code), 0.7) 80%,
+            rgba(var(--background-color-code), 0);
     }
 }
