--- a/src/components/molecules/cards/poster/style.module.css
+++ b/src/components/molecules/cards/poster/style.module.css
@@ -1,9 +1,15 @@
 .poster-card {
-    min-height: 100vh;
-    height: 100%;
-    position: relative;
+    transition: all 150ms ease-out;
+    transform: scale(1);
+    
+    border: 3px solid transparent;
 }
 
 .poster-card__image {
     border-radius: 0.75rem;
+}
+
+.poster-card:hover {
+    transform: scale(1.1);
+    border: 3px solid #0099ff2a;
 }
