--- a/src/components/organisms/hero/style.module.css
+++ b/src/components/organisms/hero/style.module.css
@@ -2,6 +2,7 @@
     min-height: 100vh;
     height: 100%;
     position: relative;
+    margin-bottom: -200px;
 }
 
 .hero__backdrop {
@@ -21,7 +22,19 @@
     align-items: center;
 }
 
-.hero__backdrop:before {
+.hero__gradient {
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero__gradient:before {
     content: "";
     display: flex;
     position: absolute;
@@ -36,7 +49,7 @@
     left: 0;
 }
 
-.hero__backdrop:after {
+.hero__gradient:after {
     content: "";
     display: flex;
     position: absolute;
@@ -57,6 +70,6 @@
 }
 
 .hero__content {
-    margin-top: 5rem;
-    max-width: 34rem;
+    /* margin-top: 5rem; */
+    max-width: 36rem;
 }
