--- a/src/components/molecules/tabs/style.module.css
+++ b/src/components/molecules/tabs/style.module.css
@@ -10,11 +10,15 @@
 .tabs__track {
 }
 
+.tabs:hover .tabs__thumb {
+    transform: scaleY(0.75) scaleX(0.9);
+}
+
 .tabs__thumb {
     --tabs-thumb-left: 0;
     --tabs-thumb-width: 4rem;
 
-    transition: all 0.6s cubic-bezier(.72,-0.36,.39,1.33);
+    transition: all 0.4s cubic-bezier(.72,-0.36,.39,1.33);
     position: absolute;
     top: 0;
     left: var(--tabs-thumb-left, 0);
