--- a/src/components/organisms/hero/style.module.css
+++ b/src/components/organisms/hero/style.module.css
@@ -59,8 +59,35 @@
         rgba(var(--background-color-code), 0)
     );
     width: 100%;
-    height: 20%;
+    height: 30%;
     bottom: 0;
+}
+
+.hero__right-gradient {
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero__right-gradient:before {
+    content: "";
+    display: flex;
+    position: absolute;
+    background: linear-gradient(
+        to left,
+        var(--background-color) 0%,
+        rgba(var(--background-color-code), 0.6),
+        rgba(var(--background-color-code), 0)
+    );
+    width: 20%;
+    height: 100%;
+    right: 0;
 }
 
 .hero__grid {
