--- a/src/components/organisms/navigation/style.module.css
+++ b/src/components/organisms/navigation/style.module.css
@@ -5,5 +5,10 @@
     position: absolute;
     width: 100%;
     z-index: 90;
-    background: linear-gradient(to bottom, var(--background-color), rgba(var(--background-color-code), 0));
+    background: linear-gradient(
+        to bottom,
+        rgba(var(--background-color-code), 0.4),
+        rgba(var(--background-color-code), 0.1),
+        rgba(var(--background-color-code), 0.0)
+    );
 }
